fix: the grid body element is blurring while selecting the cell

--- a/src/views/grid/grid.module.css
+++ b/src/views/grid/grid.module.css
@@ -57,6 +57,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    outline: none;
 }
 
 .pinned-top-rows {
